<resources>
    <string name="app_name">Guardian</string>
    <string name="welcome_to">Welcome To</string>
    <string name="app_name_main">app_name_main</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="not_registered_yet_register">Not Registered Yet? REGISTER HERE!</string>
    <string name="login">Login</string>
    <string name="personal_details">Personal Details</string>
    <string name="name">Name</string>
    <string name="email_1">Email</string>
    <string name="set_password">Set Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="emergency_contact_details">Emergency Contact Details</string>
    <string name="emergency_contact_name">Emergency Contact Name</string>
    <string name="emergency_contact_phone">Emergency Contact Phone</string>
    <string name="emergency_contact_email">Emergency Contact Email</string>
    <string name="register">Register</string>
    <string name="already_registered_login">Already Registered? LOGIN!</string>
    <string name="title_activity_maps">Map</string>
    <string name="remember_me">Remember Me</string>
    <string name="welcome">WELCOME</string>
    <string name="home_button">Home Button</string>
    <string name="logout">Logout</string>
    <string name="map_button">Map Button</string>
    <string name="title_web">Some Use-full Websites</string>
    <string name="top_img">top_img</string>
    <string name="send_emergency_message">Send Emergency Message</string>
    <string name="msg">Hey!, i am in an Emergency, I need your HELP!!   This is my Location : www.google.com/maps/?q=</string>
    <string name="rupee">₹</string>
    <string name="nearest_police_station">Nearest Police Station</string>

    <string name="news">NEWS</string>
    <string name="profile">PROFILE</string>
    <string name="emergency_numbers">Emergency Numbers</string>
    <string name="area_stats">AREA STATS</string>
    <string name="map">Find Nearest Police Station</string>
    <string name="sos">SOS</string>
    <string name="auto">Harassed by Auto Drivers?</string>
    <string name="women_helpline">Women Helpline</string>
    <string name="traffic">Traffic Helpline</string>
    <string name="senior">Senior Citizens Helpline</string>
    <string name="tourist_bureau">Tourist Bureau</string>
    <string name="commissioner_s_office">Commissioner\'s Office</string>
    <string name="todo">TODO</string>
    <string name="url">url</string>
    <string name="title">title</string>
    <string name="headlines">Headlines</string>
    <string name="lnk">Links</string>
    <string name="update_profile">Update Profle</string>
    <string name="employee_code">em_name</string>
    <string name="em_1">Emergency Contact 1</string>
    <string name="emergency_contact_2">Emergency Contact 2</string>
    <string name="address">Your Location</string>
    <string name="graph_crime">graph_crime</string>
    <string name="assault_msg_1">The Rate Of Assault Is </string>
    <string name="kidnap_msg_1">The Rate Of Kidnapping Is </string>
    <string name="theft_msg_1">The Rate Of Thefts and Robery Is </string>
    <string name="msg_2"> In This Area, at The Current Time!</string>
    <string name="call_emergency_number">Call Emergency Number</string>
    <string name="link">link</string>
    <string name="warning">Cannot Fetch Current Location Data</string>
    <string name="crime_news">Crime News</string>


</resources>
