<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_8"
    android:orientation="vertical"
    tools:context=".SOS">

    <ImageView
        android:id="@+id/logo_top"
        android:layout_width="417dp"
        android:layout_height="58dp"
        android:contentDescription="@string/top_img"
        android:src="@drawable/logo_top" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/emergency_contact_details"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/tv_disp_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="40dp"
        android:hint="@string/name"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/tv_disp_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="40dp"
        android:hint="@string/email"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/tv_disp_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="40dp"
        android:hint="@string/phone_number"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/text_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="35dp"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/bt_sos"
        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="sendSMS"
        android:layout_marginTop="50dp"
        android:text="@string/send_emergency_message"
        android:textColor="@color/colorPrimary" />

</LinearLayout>