<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_8"
    android:orientation="vertical"

    tools:context=".MainActivity">



    <ImageView
        android:layout_marginTop="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/logo_name_2"
        android:layout_gravity="center"
        android:layout_marginBottom="100dp"
        android:contentDescription="@string/app_name_main" />

    <EditText
        android:id="@+id/l_et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:hint="@string/email"
        android:layout_marginBottom="15dp"
        android:inputType="textEmailAddress"
        android:importantForAutofill="no" />
    <EditText
        android:id="@+id/l_et_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginBottom="25dp"
        android:importantForAutofill="no" />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_me"
        android:layout_gravity="center"
        android:id="@+id/checkbox_remember"
        android:textSize="20sp"
        android:gravity="center"/>

    <Button
        android:id="@+id/l_bt_login"
        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:text="@string/login"
        android:layout_marginBottom="8dp"
        android:layout_gravity="center"/>
    <TextView
        android:id="@+id/l_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_registered_yet_register"
        android:textSize="15sp"
        android:textColor="#000000"
        android:layout_gravity="center"/>

    <ProgressBar
        android:id="@+id/progressb_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:visibility="invisible"
        tools:visibility="invisible" />


</LinearLayout>