<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/back_8"
    android:layout_height="match_parent"
    tools:context=".Profile">
    <ImageView
        android:id="@+id/logo_top"
        android:layout_width="417dp"
        android:layout_height="58dp"
        android:contentDescription="@string/top_img"
        android:src="@drawable/logo_top" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25sp"
        android:textSize="45sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:text="@string/update_profile"
        android:id="@+id/top_navig"
        android:layout_marginBottom="30dp"
        android:gravity="center"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/update_name"
        android:layout_marginEnd="30dp"
        android:inputType="text"
        android:layout_marginStart="20dp"
        android:autofillHints="@string/name" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/update_email"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:inputType="textEmailAddress"
        android:layout_marginStart="20dp"
        android:autofillHints="@string/email" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/update_phone"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="20dp"
        android:inputType="phone"
        android:autofillHints="@string/phone_number" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/emergency_contact_details"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:layout_marginTop="25sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:gravity="center"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:id="@+id/update_em_name"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="20dp"
        android:inputType="text"
        android:autofillHints="@string/employee_code" />
    <EditText
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:id="@+id/update_em_email"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="20dp"
        android:inputType="textEmailAddress"
        android:autofillHints="@string/employee_code" />
    <EditText
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:id="@+id/update_em_phone"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="20dp"
        android:inputType="phone"
        android:autofillHints="@string/employee_code" />

    <Button
        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_profile"
        android:textSize="25sp"
        android:id="@+id/bt_update"
        android:layout_marginTop="35dp"
        android:layout_gravity="center"/>

</LinearLayout>