<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/back_8"
    tools:context=".AreaStats">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo_top"
            android:layout_width="417dp"
            android:layout_height="58dp"
            android:contentDescription="@string/top_img"
            android:layout_marginTop="10dp"
            android:src="@drawable/logo_top" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25sp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_person_pin_circle_black_24dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="25sp"/>
        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address"
            android:id="@+id/address_loc"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="12sp"
            android:id="@+id/address_pin"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/assault_msg_1"
            android:id="@+id/assault_pre"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:textSize="25sp"/>
        <View
            android:layout_width="wrap_content"
            android:layout_height="3dp"
            android:background="#0000A0"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/kidnap_msg_1"
            android:textSize="25sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:id="@+id/kidnaping_pre"/>
        <View
            android:layout_width="wrap_content"
            android:layout_height="3dp"
            android:background="#0000A0"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_marginEnd="5dp"
            android:hint="@string/theft_msg_1"
            android:textSize="25sp"
            android:id="@+id/theft_pre"/>
        <View
            android:layout_width="wrap_content"
            android:layout_height="3dp"
            android:background="#0000A0"/>

        <ImageView
            android:id="@+id/graph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:contentDescription="@string/graph_crime" />

    </LinearLayout>



</ScrollView>